@@ -792,7 +792,8 @@ int getRandomPersonObjectOfRace( int inRace );
 // gets a family member near inMotherID with max distance away in family
 // spectrum 
 int getRandomFamilyMember( int inRace, int inMotherID, int inFamilySpan,
-                           char inForceGirl = false );
+                           char inForceGirl = false,
+                           char inForceBoy = false );
 
 
 
