@@ -8807,6 +8807,51 @@ char getForceSpawn( char *inEmail, ForceSpawnRecord *outRecordToFill ) {
 
 
 
+static char getForceBoy( char *inEmail ) {
+    char *cont = SettingsManager::getSettingContents( "forceBoyAccounts" );
+    
+    if( cont == NULL ) {
+        return false;
+        }
+    int numParts;
+    char **lines = split( cont, "\n", &numParts );
+
+    delete [] cont;
+    
+    char found = false;
+
+    for( int i=0; i<numParts; i++ ) {
+        
+        if( strstr( lines[i], inEmail ) == lines[i] ) {
+            // matches email
+
+            char emailBuff[100];
+            
+            int on = 0;
+            
+            sscanf( lines[i], "%99s %d", emailBuff, &on );
+
+            if( on == 1 &&
+                strcmp( inEmail, emailBuff ) == 0 ) {
+                
+                found = true;
+                break;
+                }
+            }
+        
+        }
+    
+    for( int i=0; i<numParts; i++ ) {
+        delete [] lines[i];
+        }
+    delete [] lines;
+
+    return found;
+    }
+
+
+
+
 static void makeOffspringSayMarker( int inPlayerID, int inIDToSkip ) {
     
     LiveObject *playerO = getLiveObject( inPlayerID );
@@ -10006,6 +10051,10 @@ int processLoggedInPlayer( int inAllowOrForceReconnect,
         }
 
 
+    char forceBoy = getForceBoy( inEmail );
+    
+    
+
 
 
     newObject.parentChainLength = 1;
@@ -10331,6 +10380,12 @@ int processLoggedInPlayer( int inAllowOrForceReconnect,
                 if( famMothers + famGirls < min ||
                     famGirls == 0 ) {
                     forceGirl = true;
+
+                    if( forceBoy ) {
+                        // override
+                        // never let forced-boy accounts be girls
+                        forceGirl = false;
+                        }
                     }
                 }
             }
@@ -10440,7 +10495,7 @@ int processLoggedInPlayer( int inAllowOrForceReconnect,
                 if( childRace == parentRace ) {
                     newObject.displayID = getRandomFamilyMember( 
                         parentRace, parent->displayID, familySpan,
-                        forceGirl );
+                        forceGirl, forceBoy );
                     }
                 else {
                     newObject.displayID = 
